# 0x

./: README.md
.devcontainer/: Dockerfile  dependencies.txt  devcontainer.json
fcc_solidity/: README.md  brownie_general.txt  general_notes.txt
fcc_solidity/lesson_06/: brownie-config.yaml
fcc_solidity/lesson_09/: brownie-config.yaml
fcc_solidity/lesson_10/: README.md  brownie-config.yaml
fcc_solidity/lesson_11/: brownie-config.yaml
fcc_solidity/lesson_12/: brownie-config.yaml
fcc_solidity/lesson_13/: README.md  brownie-config.yaml
local_blockchain/: .gitignore  README.md  commands.txt  genesis.json
rust_playground/BlockChainInfoApp/blockchain_info_app/: .env  Cargo.toml
rust_playground/BlockChainInfoApp/blockchain_info_app/src/: blockchain_address.rs  blockchain_info.rs  blockchain_transaction.rs  main.rs
rust_playground/BlockChainInfoApp/blockchain_info_app/src/ethereum/: eth_info.rs  eth_info_old.rs  explorer.rs  utils.rs
rust_playground/BlockChainInfoApp/blockchain_info_app/src/geth/: geth_info.rs
rust_playground/BlockChainInfoApp/blockchain_info_app/src/now_nodes/: blockchain_address.rs  blockchain_info.rs  blockchain_status.rs  blockchain_transaction.rs
rust_playground/RustBook/Chapter_14_Cargo/: Cargo.toml  Readme.txt
rust_playground/RustBook/Chapter_14_Cargo/adder/: Cargo.toml
rust_playground/RustBook/Chapter_14_Cargo/adder/src/: main.rs
rust_playground/RustBook/Chapter_14_Cargo/addone/: Cargo.toml
rust_playground/RustBook/Chapter_14_Cargo/addone/src/: lib.rs
rust_playground/RustBook/Chapter_14_Cargo/src/: lib.rs  main.rs
(+154 files in other folders)
