[package]
name = "blockchain_info_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
async-std = {version = "1", features = ["attributes",  "tokio"]}
reqwest = { version = "0.11", features = ["json"] }
tokio = { version= "1", features = ["full"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono="0.4.22"
web3 = "0.17.0"
dialoguer = "0.10.2"